--- a/Wishshop/Shop/templates/login.html
+++ b/Wishshop/Shop/templates/login.html
@@ -18,6 +18,7 @@
         <input type="text" placeholder="Username" name="username" />
         <input type="password" placeholder="Password" name="password" />
         <button type="submit" class="btn btn-default">Login</button>
+        <a href="{% url 'password_reset' %}">Forget password?</a>
     </form>
 </div>
 
