--- a/Wishshop/Shop/templates/base.html
+++ b/Wishshop/Shop/templates/base.html
@@ -7,7 +7,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>Home | E-Shopper</title>
+	<title>
+		{% block title %}
+		<!-- Title block  -->
+		{% endblock %}| E-Shopper
+	</title>
 	<link href="/static/shop/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/static/shop/css/font-awesome.min.css" rel="stylesheet">
 	<link href="/static/shop/css/prettyPhoto.css" rel="stylesheet">
