--- a/Wishshop/Shop/templates/user/password_reset.html
+++ b/Wishshop/Shop/templates/user/password_reset.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %} Login {% endblock %}
+{% block title %} Password Reset {% endblock %}
 {% block body %}
 <br>
 <br>
@@ -13,12 +13,11 @@
     {% if error%}
     {{error}}
     {% endif %}
-    <form action="{% url 'login' %}" method="POST">
+    <form method="POST">
         {% csrf_token%}
-        <input type="text" placeholder="Username" name="username" />
-        <input type="password" placeholder="Password" name="password" />
-        <button type="submit" class="btn btn-default">Login</button>
-        <a href="{% url 'password_reset' %}">Forget password?</a>
+        <input type="email" placeholder="Email Address" name="email" />
+        <button type="submit" class="btn btn-default">Reset my password</button>
+
     </form>
 </div>
 
